Revert "Dev 3.0.0 (#371)" (#372)
This reverts commit 47f0359184d75dd17b8efcb097d6d615ac7135f5.